Set max size for modal of window. Fix followers width overflow. Add scroll to profile modal followers height.

--- a/renderer/components/modal/modal.module.css
+++ b/renderer/components/modal/modal.module.css
@@ -5,14 +5,19 @@
     left: 0;
     right: 0;
     bottom: 0;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
 }
 
 .modal {
+    position: relative;
     background-color: #EEE;
     border-radius: 10px;
     padding: 20px;
+    top: 50%;
+    transform: translateY(calc(-50% - 20px));
     margin: 20px;
     max-height: calc(100% - 80px);
+    max-width: calc(100% - 80px);
+    display: inline-block;
+    text-align: left;
 }
